# ToughMeshio

./: pyproject.toml  tasks.py
toughio/: __init__.py  _common.py
toughio/_cli/: _extract.py
toughio/_io/: __init__.py  _common.py
toughio/_io/input/tough/: _read.py  _write.py
toughio/_io/input/toughreact_chemical/: _read.py
toughio/_io/input/toughreact_solute/: _read.py
toughio/core/: __init__.py  _curve.py  _typing.py  capillarity.py  exceptions.py  file.py  h5file.py  history_output.py  labeler.py  mesh.py  output.py  particle_tracker.py  relative_permeability.py
toughio/legacy/: __init__.py  _helpers.py
toughio/legacy/flac3d/: __init__.py  _flac3d.py
toughio/meshmaker/: __init__.py  _helpers.py  _meshmaker.py  _triangulate.py  _voxelize.py
toughio/utils/: __init__.py  _misc.py
